# claude-counter-statusbar

./: AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml
claude_counter/: __init__.py  statusline.py
