[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-counter"
version = "2.5.0"
description = "Claude Code statusline — token usage, cache status, and session cost"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "bonkey" }]
keywords = ["claude", "claude-code", "statusline"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
claude-counter = "claude_counter.statusline:main"

[project.urls]
Repository = "https://github.com/bonkey/claude-counter-statusbar"
